updated formating on pugbs

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -3,14 +3,14 @@
     authors:'Naveen Duhan, Rakesh Kaundal',
     content:'RSLpred2: An Integrated Web Server for the Annotation of Rice Proteome Subcellular Localization Using Deep Learning',
     doiLink:'https://doi.org/10.1186/s12284-025-00767-7',
-    doiTitle:'https://doi.org/10.1186/s12284-025-00767-7',
+    doiTitle:'10.1186/s12284-025-00767-7',
     year:'2025'
     },
     {
     authors:'Naveen Duhan, Rakesh Kaundal',
     content:'PRGminer: harnessing deep learning for the prediction of resistance genes involved in plant defense mechanisms',
     doiLink:'https://doi.org/10.3389/fpls.2025.1411525',
-    doiTitle:'https://doi.org/10.3389/fpls.2025.1411525',
+    doiTitle:'10.3389/fpls.2025.1411525',
     year:'2025'
     },
     {
@@ -24,14 +24,14 @@
     authors:'Naveen Duhan, Rakesh Kaundal',
     content:'AtSubP‐2.0: An integrated web server for the annotation of Arabidopsis proteome subcellular localization using deep learning',
     doiLink:'https://doi.org/10.1002/tpg2.20536',
-    doiTitle:'https://doi.org/10.1002/tpg2.20536',
+    doiTitle:'10.1002/tpg2.20536',
     year:'2025'
     },
     {
     authors:'John D Morrey, Venkatraman Siddharthan, Hong Wang, Alexandre LR Oliveira, Keiichiro Susuki, Rakesh Kaundal, Sara M Freeman, Aaron J Thomas, Naveen Duhan, Nathan G Corry',
     content:'Identification of candidate genes involved in Zika virus-induced reversible paralysis of mice',
     doiLink:'https://doi.org/10.1038/s41598-025-86475-0',
-    doiTitle:'https://doi.org/10.1038/s41598-025-86475-0',
+    doiTitle:'10.1038/s41598-025-86475-0',
     year:'2025'
     }
 ] 
@@ -42,42 +42,42 @@
     authors:'Simardeep Kaur, Karishma Seem, DWIJESH CHANDRA MISHRA, Rakesh Kaundal, Suresh Kumar, Trilochan Mohapatra',
     content:'Transcription factor-mediated gene regulatory networks contributes to reproductive stage drought tolerance in rice (Oryza sativa)',
     doiLink:'https://doi.org/10.56093/ijas.v94i9.144862',
-    doiTitle:'https://doi.org/10.56093/ijas.v94i9.144862',
+    doiTitle:'10.56093/ijas.v94i9.144862',
     year:'2024'
     },
     {
     authors:'Raghav Kataria, Naveen Duhan, Rakesh Kaundal',
     content:'Navigating the human-monkeypox virus interactome: HuPoxNET atlas reveals functional insights',
     doiLink:'https://doi.org/10.3389/fmicb.2024.1399555',
-    doiTitle:'https://doi.org/10.3389/fmicb.2024.1399555',
+    doiTitle:'10.3389/fmicb.2024.1399555',
     year:'2024'
     },
     {
     authors:'David Guevara-Barrientos, Rakesh Kaundal',
     content:'Malivhu: A Comprehensive Bioinformatics Resource for Filtering SARS and MERS Virus Proteins by Their Classification, Family and Species, and Prediction of Their Interactions Against Human Proteins',
     doiLink:'https://doi.org/10.1177/11779322241263671',
-    doiTitle:'https://doi.org/10.1177/11779322241263671',
+    doiTitle:'10.1177/11779322241263671',
     year:'2024'
     },
     {
     authors:'Simardeep Kaur, Karishma Seem, Naveen Duhan, Suresh Kumar, Rakesh Kaundal, Trilochan Mohapatra',
     content:'Comparative miRNome and transcriptome analyses reveal the expression of novel miRNAs in the panicle of rice implicated in sustained agronomic performance under terminal drought stress',
     doiLink:'https://doi.org/10.1007/s00425-024-04399-x',
-    doiTitle:'https://doi.org/10.1007/s00425-024-04399-x',
+    doiTitle:10.1007/s00425-024-04399-x',
     year:'2024'
     },
     {
     authors:'Jack H Nunberg, Jonna B Westover, Joanne York, Kie Hoon Jung, Kevin W Bailey, Kirsten M Boardman, Minghao Li, Rachel S Furnell, Samantha R Wasson, Justin S Murray, Rakesh Kaundal, Aaron J Thomas, Brian B Gowen',
     content:'Restoration of virulence in the attenuated Candid#1 vaccine virus requires reversion at both positions 168 and 427 in the envelope glycoprotein GPC',
     doiLink:'https://doi.org/10.1128/jvi.00112-24',
-    doiTitle:'https://doi.org/10.1128/jvi.00112-24',
+    doiTitle:'10.1128/jvi.00112-24',
     year:'2024'
     },
     {
     authors:'Simardeep Kaur, Karishma Seem, Deepesh Kumar, Suresh Kumar, Rakesh Kaundal, Trilochan Mohapatra',
     content:'Biogenesis to functional significance of microRNAs under drought stress in rice: Recent advances and future perspectives',
     doiLink:'https://doi.org/10.1016/j.stress.2024.100447',
-    doiTitle:'https://doi.org/10.1016/j.stress.2024.100447',
+    doiTitle:'10.1016/j.stress.2024.100447',
     year:'2024'
     }
 
@@ -89,49 +89,49 @@
     authors:'<u><em>Duhan, N</em></u>,Kaur, S<sup>^</sup> and Kaundal, R<sup>*</sup>',
     content:'ranchSATdb: a Genome-wide Simple Sequence Repeat (SSR) Markers Database of Livestock Species for Mutant Germplasm Characterization and Improving Farm Animal Health. <em>Genes</em> 14(7): 1481',
     doiLink:'https://doi.org/10.3390/genes14071481',
-    doiTitle:'https://doi.org/10.3390/genes14071481',
+    doiTitle:'10.3390/genes14071481',
     year:'2023'
   },
     {
     authors:'Kaur, S<sup>^</sup>, Seem K,  Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
     content:'Comparative Genome-wide Analysis of MicroRNAs and Their Target Genes in Roots of Contrasting Indica Rice Cultivars under Reproductive-Stage Drought. <em>Genes</em> 14(7): 1390',
     doiLink:'https://doi.org/10.3390/genes14071390',
-    doiTitle:'https://doi.org/10.3390/genes14071390',
+    doiTitle:'10.3390/genes14071390',
     year:'2023'
   },
   {
     authors:'<u><em>Kataria, R</em></u>, Kaur, S<sup>^</sup> and Kaundal, R<sup>*</sup>',
     content:'Deciphering the Complete Human-Monkeypox Virus Interactome: Identifying Immune Responses and Potential Drug Targets. <em>Frontiers in Immunology </em>14: 1116988. ',
     doiLink:'https://doi.org/10.3389/fimmu.2023.1116988',
-    doiTitle:'https://doi.org/10.3389/fimmu.2023.1116988',
+    doiTitle:'10.3389/fimmu.2023.1116988',
     year:'2023'
   },
     {
     authors:'<u><em>Duhan, N</em></u> and Kaundal, R<sup>*</sup>',
     content:'HuCoPIA: An atlas of Human vs SARS-CoV-2 interactome and the comparative analysis with other <em>Coronaviridae</em> family viruses. <em>Viruses</em> 15(2): 492. ',
     doiLink:'https://doi.org/10.3390/v15020492',
-    doiTitle:'https://doi.org/10.3390/v15020492',
+    doiTitle:'10.3390/v15020492',
     year:'2023'
   },
   {
     authors:'Kaur, S<sup>^</sup>, Seem K, <u><em>Duhan, N</em></u>, Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
     content:'Transcriptome and Physio-Biochemical Profiling Reveals Differential Responses of Rice Cultivars at Reproductive-stage Drought Stress. <em>International Journal of Molecular Sciences</em> 24(2): 1002.',
     doiLink:'https://doi.org/10.1016/j.csbj.2022.12.044',
-    doiTitle:'https://doi.org/10.1016/j.csbj.2022.12.044',
+    doiTitle:'10.1016/j.csbj.2022.12.044',
     year:'2023'
   },
    {
     authors:'<u><em>Guevara, D</em></u> and R<sup>*</sup>',
     content:'ProFeatX: a parallelized protein feature extraction suite for machine learning. <em>Computational and Structural Biotechnology Journal</em> 21: 796-801.  ',
     doiLink:'https://doi.org/10.3389/fpls.2022.1066421',
-    doiTitle:'https://doi.org/10.3389/fpls.2022.1066421',
+    doiTitle:'10.3389/fpls.2022.1066421',
     year:'2023'
   },
   {
     authors:'Mahalingam, R<sup>*</sup>,<u><em>Duhan, N</em></u>, Kaundal, R, Smertenko, A, Nazarov, T and Bregitzer, P',
     content:'Heat and drought induced transcriptomic changes in barley varieties with contrasting stress response phenotypes. <em>Frontiers in Plant Science </em> 13: 1066421 ',
     doiLink:'https://doi.org/10.3389/fpls.2022.1066421',
-    doiTitle:'https://doi.org/10.3389/fpls.2022.1066421',
+    doiTitle:'10.3389/fpls.2022.1066421',
     year:'2023'
   }
 ]
@@ -142,14 +142,14 @@
     authors:'<u><em>Kataria, R</em></u>. and Kaundal, R<sup>*</sup>',
     content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> Volume 2022, baac068',
     doiLink:'https://doi.org/10.1093/database/baac068',
-    doiTitle:'https://doi.org/10.1093/database/baac068',
+    doiTitle:'10.1093/database/baac068',
     year:'2022'
   },
   {
     authors:'<u><em>Duhan, N.</em></u><sup>$</sup>, <u><em>Kataria, R.</em></u><sup>$</sup> and Kaundal, R<sup>*</sup>',
     content:'TritiKBdb: A functional annotation resource for deciphering the complete interaction networks in Wheat - Karnal Bunt pathosystem. <em>International Journal of Molecular Sciences</em> <b>23</b>(13): 7455. PMID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9267065/" class="kbl-link" target="_blank">9267065</a>',
     doiLink:'https://doi.org/10.3390/ijms23137455',
-    doiTitle:'https://doi.org/10.3390/ijms23137455',
+    doiTitle:'10.3390/ijms23137455',
     year:'2022'
   },
     {
@@ -163,21 +163,21 @@
     authors:'<em><u>Kataria, R.</u></em> and Kaundal, R<sup>*</sup>.',
     content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em> 18, Article number: 73 (2022). PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
     doiLink:'https://doi.org/10.1186/s13007-022-00897-9',
-    doiTitle:'https://doi.org/10.1186/s13007-022-00897-9',
+    doiTitle:'10.1186/s13007-022-00897-9',
     year:'2022'
   },
   {
     authors:'Kaundal, R.<sup>$*</sup>, <em><u>Loaiza, C.D.</u></em><sup>$</sup>, <em><u>Duhan, N.</u></em> and Flann, N.',
     content:'deepHPI: a comprehensive Deep Learning platform for accurate prediction and visualization of host-pathogen protein-protein interactions. <em>Briefings in Bioinformatics</em> bbac125: 1-11. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35511057/" class="kbl-link" target="_blank">35511057</a>',
     doiLink:'https://doi.org/10.1093/bib/bbac125',
-    doiTitle:'https://doi.org/10.1093/bib/bbac125',
+    doiTitle:'10.1093/bib/bbac125',
     year:'2022'
   },
   {
     authors: '<em><u>Kataria, R.</u></em> and Kaundal, R<sup>*</sup>.',
     content: 'Deciphering the Host-Pathogen Interactome of Wheat-Common bunt system: A Step towards Enhanced Resilience in Next Generation Wheat. <em>International Journal of Molecular Sciences</em> <b>23</b>(5): 2589. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8910311/" class="kbl-link" target="_blank">8910311</a>.',
     doiLink: 'https://doi.org/10.3390/ijms23052589',
-    doiTitle: 'https://doi.org/10.3390/ijms23052589',
+    doiTitle: '10.3390/ijms23052589',
     year: '2022'
   },
 
@@ -185,7 +185,7 @@
     authors: '<em><u>Duhan, N.</u></em>, Norton, J.M. and Kaundal, R<sup>*</sup>.',
     content: 'deepNEC: a novel alignment-free tool for the identification and classification of nitrogen biochemical network-related enzymes using deep learning. <em>Briefings in Bioinformatics</em> bbac071: 1-16. <em>PMID:</em> <a href="https://pubmed.ncbi.nlm.nih.gov/35325031/" class="kbl-link" target="_blank">35325031 </a>.',
     doiLink: 'https://doi.org/10.1093/bib/bbac071',
-    doiTitle: 'https://doi.org/10.1093/bib/bbac071',
+    doiTitle: '10.1093/bib/bbac071',
     year: '2022'
   },
 
@@ -193,7 +193,7 @@
     authors: '<em><u>Kataria, R.</u></em>, <em><u>Duhan, N.</u></em> and Kaundal, R<sup>*</sup>.',
     content: 'Computational Systems Biology of Alfalfa-Bacterial Blight Host-Pathogen Interactions: Uncovering the Complex Molecular Networks for Developing Durable Disease Resistant Crop. <em>Frontiers in Plant Science</em> 12: 807354. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8891223/" class="kbl-link" target="_blank">8891223</a>.',
     doiLink: 'https://doi.org/10.3389/fpls.2021.807354',
-    doiTitle: 'https://doi.org/10.3389/fpls.2021.807354',
+    doiTitle: '10.3389/fpls.2021.807354',
     year: '2022'
   },
 
@@ -201,14 +201,14 @@
     authors: 'Yang, X., Hu, Xiao-Li., Zhang, J., Kaundal, R., <em><u>Kataria, R.</u></em>, Jessy L.L., Mitchell, J., Tschaplinski, T., Tuskan, G.A. and Cheng, Zong-Ming (Max).',
     content: 'Diversity and conservation of plant small secreted proteins associated with arbuscular mycorrhizal symbiosis. <em>Horticulture Research</em> uhac043: 1-22. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8985099/" class="kbl-link" target="_blank">8985099</a>.',
     doiLink: 'https://doi.org/10.1093/hr/uhac043',
-    doiTitle: 'https://doi.org/10.1093/hr/uhac043'
+    doiTitle: '10.1093/hr/uhac043'
   },
 
     {
     authors: 'Rutigliano, H.M., Thomas, A.J., Umbaugh, J.J., Wilhelm, A., Sessions, B.R., Kaundal, R., <em><u>Duhan, N.</u></em>, Hicks, B.A., Schlafer, D.H., White, K.L. and Davies, C.J.',
     content: 'Increased Expression of Pro-Inflammatory Cytokines at the Fetal-Maternal Interface in Bovine Pregnancies Produced by Cloning. <em>American Journal of Reproductive Immunology</em>, e13520. <em>PMID:</em> <a href="https://pubmed.ncbi.nlm.nih.gov/34974639/" class="kbl-link" target="_blank">34974639</a>.',
     doiLink: 'https://doi.org/10.1111/aji.13520',
-    doiTitle: 'https://doi.org/10.1111/aji.13520'
+    doiTitle: '10.1111/aji.13520'
   }
 ]
 %}
@@ -231,14 +231,14 @@
     authors: '<em><u>Duhan, N.</u></em> and Kaundal, R<sup>*</sup>.',
     content: 'LegumeSSRdb: a Comprehensive Microsatellite Marker Database of Legumes for Germplasm Characterization and Crop Improvement. <em>International Journal of Molecular Sciences</em> <b>22</b>(21): 11350. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8583334/" class="kbl-link" target="_blank">8583334</a>.',
     doiLink: 'https://doi.org/10.3390/ijms222111350',
-    doiTitle: 'https://doi.org/10.3390/ijms222111350'
+    doiTitle: '10.3390/ijms222111350'
   },
 
   {
     authors: '<em><u>Loaiza, C.D.</u></em>, <em><u>Duhan, N.</u></em> and Kaundal, R<sup>*</sup>.',
     content: 'GreeningDB: a database of host-pathogen protein-protein interactions and annotation features of the bacteria causing huanglongbing HLB disease. <em>International Journal of Molecular Sciences</em> <b>22</b>(19): 10897. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8509195/" class="kbl-link" target="_blank">8509195</a>.',
     doiLink: 'https://doi.org/10.3390/ijms221910897',
-    doiTitle: 'https://doi.org/10.3390/ijms221910897'
+    doiTitle: '10.3390/ijms221910897'
   },
 
   {
@@ -423,8 +423,8 @@
   {
     authors: 'Kaundal, R<sup>*</sup>. and Sharma, B.K.',
     content: 'Genotype x environment interaction and stability analysis for yield and other quantitative traits in maize (Zea mays L.) under rainfed and high rainfall valley areas of the sub-montane. Research on Crops 7(1): 171-180.',
-    doiLink: '',
-    doiTitle: ''
+    doiLink: 'https://www.cabidigitallibrary.org/doi/full/10.5555/20063156733',
+    doiTitle: '10.5555/20063156733'
   }
 
 ]
