updated pubs again

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -156,7 +156,7 @@
     authors:'<u><em>Kataria, R.</em></u> and Kaundal, R<sup>*</sup>.',
     content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35800602" class="kbl-link" target="_blank">35800602</a>',
     doiLink:'https://doi.org/10.3389/fpls.2022.895480',
-    doiTitle:'https://doi.org/10.3389/fpls.2022.895480',
+    doiTitle:'10.3389/fpls.2022.895480',
     year:'2022'
   },
     {
