Updated home page and fixed some more links

--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -102,13 +102,13 @@
     <div class="research-fact">
       <div class="row py-5">
         <div class="col-4 text-center">
-          <h2>37</h2>
+          <h2>54</h2>
           <h6>JOURNAL ARTICLES</h6>
         </div>
 
         <div class="col-4 text-center">
           <h2>$1,524,048</h2>
-          <h6>GRANTS RECEIVED</h6>
+          <h6>GRANT FUNDING RECEIVED</h6>
         </div>
 
         <div class="col-4 text-center">
