--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,27 @@
+{% set rslpred2 = {
+    title: "RSLpred2: An Integrated Web Server for the Annotation of Rice Proteome Subcellular Localization Using Deep Learning",
+    date: "July 4, 2025",
+    desc: "Oryza sativa, commonly known as rice, is a widely studied model organism in plant biology. Understanding the subcellular localization of proteins within rice cells is crucial for unraveling their functions and deciphering complex cellular processes. Subcellular localization provides valuable insights into protein trafficking, interactions, and regulatory mechanisms, ultimately aiding in the identification of potential targets for agricultural and biotechnological applications.",
+    img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/rslpred2.png",
+    link: "/RSLpred2/",
+    alt_text: "RSLpred-2.0 web page."
+} %}
+{% set prgminer = {
+    title: "PRGminer: harnessing deep learning for the prediction of resistance genes involved in plant defense mechanisms",
+    date: "June 2, 2025",
+    desc: "A powerful deep learning tool for identifying and classifying plant resistance genes (R-genes) in plant genomes.",
+    img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/prgminer.png",
+    link: "/prgminer/",
+    alt_text: "PRGminer web page."
+} %}
+{% set atsubp2 = {
+    title: "AtSubP‐2.0: An integrated web server for the annotation of Arabidopsis proteome subcellular localization using deep learning ",
+    date: "February 9, 2025",
+    desc: "The AtSubP-2.0 model utilizes a multi-layered architecture with a combination of convolutional neural networks (CNNs) and recurrent neural networks (RNNs). It takes protein sequence inputs and generates predictions for localization to various cellular compartments, including the nucleus, cytoplasm, plasma membrane, endoplasmic reticulum, Golgi apparatus, mitochondria, peroxisomes, and vacuoles.",
+    img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/atsubp2.png",
+    link: "/AtSubP2/",
+    alt_text: "AtSubp-2.0 web page."
+} %}
 {% set hpipy = {
     title: "HPIpy: A Host-Pathogen Protein-Protein Interactions Prediction Tool.",
     date: "November 20, 2024",
@@ -87,7 +111,7 @@
     title: "AtSubP",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/atsubp.png?a=height&w=6&h=6",
     date: "Jan 1, 2012",
-    desc: " 	The present tool is developed as a part of our broader study focused on investigating the advantages of developing",
+    desc: "The present tool is developed as a part of our broader study focused on investigating the advantages of developing",
     link: "https://www.zhaolab.org/AtSubP/index.php/",
     alt_text: "AtSubP web page."
   }
@@ -509,7 +533,7 @@
 %}
 
 {% set general = [naveenDefends, naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
-{% set science = [hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
+{% set science = [rslpred2, prgminer, atsubp2, hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [hpipy, naveenDefends, naveenReward] %}
+{% set latest = [rslpred2, prgminer, atsubp2, hpipy, naveenDefends] %}
