--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -73,6 +73,7 @@
         <ul class="list-unstyled small">
           <li><a href="publications" target="_blank" rel="noopener noreferrer" class="footer-link">Journal Articles</a></li>
           <li><a href="publications/?content=conf" target="_blank" rel="noopener noreferrer" class="footer-link">Conferences & Talks</a></li>
+          <li><a href="publications/?content=edit" target="_blank" rel="noopener noreferrer" class="footer-link">Editorials</a></li>
         </ul>
       </section>
 
