--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -21,14 +21,25 @@
     subtitle: "Bioinformatics Scientist",
     modifier: "Larson",
     type: "Bioinformatics Staff",
-    bio: "Rousselene Larson is a researcher at Utah State University with expertise in
-      Bioinformatics. She works collaboratively with interdisciplinary scholars to
-      comprehend research objectives and provide informatics solutions to  projects
-      involving NGS data analysis. She is proficient in Unix/Linux shell
-      scripting, R, Python, Perl, and a range of bioinformatics tools/packages.
-      Her sequence analysis comprises of genome assembly, RNA-seq,
-      Bisulfite_seq, and SNP analysis.",
+    bio: "Rousselene is a Bioinformatician with over 10 years of experience specializing in 
+    Next-Generation Sequencing (NGS) data analysis and pipeline development. Her expertise spans 
+    across genomic, transcriptomic, and epigenomic data processing, from raw sequencing reads to 
+    biologically meaningful insights. She have designed and optimized scalable, reproducible 
+    bioinformatics pipelines, integrating tools for quality control, alignment, variant calling, 
+    differential expression analysis, and more. With a strong background in scripting 
+    (Python, R, Bash) and high-performance computing and AWS, she has worked on diverse projects 
+    in clinical genomics, cancer research, and microbial genomics, contributing to projects in 
+    clinical genomics, cancer research, and precision medicine, driving data-driven advancements in 
+    drug discovery. 
+    
+    <br>
+    Some of her research focuses on docking analysis and drug discovery, leveraging molecular 
+    docking techniques to study protein-ligand interactions, perform virtual screening, and develop 
+    computational models for identifying potential therapeutic compounds. she integrates bioinformatics 
+    and cheminformatics tools to predict binding affinities, optimize lead compounds, and support 
+    structure-based drug design",
     email: "rousselene.larson@usu.edu",
+    {# img: "/image/raw/bioinfo/profile/rousselenel.jpg?h=600&w=500", #}
     img: "/image/raw/bioinfo/profile/2.jpg",
     social: [
       {type: "linkedin", link: "https://www.linkedin.com/feed/"},
@@ -36,7 +47,6 @@
     ]
   }
 %}
-
 {% set brady = {
     name: "Brady Christianson",
     subtitle: "MS Student | PSC",
@@ -48,7 +58,6 @@
     social: []
   }
 %}
-
 {% set kaige = {
     name: "Kaige Zhang",
     subtitle: "PhD Research Assistant | CS",
@@ -64,7 +73,6 @@
     social: []
   }
 %}
-
 {% set cristian = {
     name: "Cristian Orduz",
     subtitle: "MS Student | PSC",
@@ -76,7 +84,6 @@
     social: []
   }
 %}
-
 {% set naveen = {
     name: "Naveen Duhan",
     subtitle: "PhD Student | PSC",
@@ -94,7 +101,6 @@
     ]
   }
 %}
-
 {% set suyash = {
     name: "Suyash Mhetre",
     subtitle: "MS Student | MIS",
@@ -106,7 +112,6 @@
     social: []
   }
 %}
-
 {% set nikhil = {
     name: "Nikhil Sai",
     subtitle: "MS Student | CS",
@@ -118,7 +123,6 @@
     social: []
   }
 %}
-
 {% set david = {
     name: "David Guevara",
     subtitle: "PhD Student | CS",
@@ -130,7 +134,6 @@
     social: []
   }
 %}
-
 {% set matt = {
     name: "Matthew Lister",
     subtitle: "HPC Administrator | CS",
@@ -144,7 +147,6 @@
     ]
   }
 %}
-
 {% set austin = {
     name: "Austin Swainston",
     subtitle: "HPC Administrator | BS Technology Systems",
@@ -158,7 +160,6 @@
     ]
   }
 %}
-
 {% set caleby = {
     name: "Caleb A. Young",
     subtitle: "HPC Administrator | Undergraduate Research Assistant",
@@ -173,8 +174,6 @@
     ]
   }
 %}
-
-
 {% set colin = {
     name: "Colin Bernhardt",
     subtitle: "HPC Administrator | BSc Computer Engineering",
@@ -188,7 +187,6 @@
     ]
   }
 %}
-
 {% set shelby = {
     name: "Shelby McCowan",
     subtitle: "HPC Administrator | BSc Biochemistry",
@@ -204,7 +202,6 @@
     ]
   }
 %}
-
 {% set kolton = {
     name: "Kolton Hauck",
     subtitle: "BSc Biological Engineering",
@@ -216,9 +213,8 @@
     social: []
   }
 %}
-
 {% if false %}
-{% set andrew = {
+  {% set andrew = {
     name: "Andrew Jouffray",
     subtitle: "BSc Computer Science",
     modifier: "Jouffray",
@@ -232,7 +228,6 @@
   }
 %}
 {% endif %}
-
 {% set mitchell = {
     name: "Mitchell Millerberg",
     subtitle: "BSc Biotechnology",
@@ -247,7 +242,6 @@
     ]
   }
 %}
-
 {% set template = {
     name: "Rousselene",
     subtitle: "Bioinformatics",
@@ -259,10 +253,9 @@
     social: []
   }
 %}
-
 {% set udarika = {
     name: "Udarika Ediriweera",
-    subtitle: "",
+    subtitle: "MS Student | PSC",
     modifier: "Udarika",
     type: "Alumni",
     bio: "",
@@ -271,10 +264,9 @@
     social: []
   }
 %}
-
 {% set raul = {
     name: "Raul Ramirez",
-    subtitle: "",
+    subtitle: "Student | CS",
     modifier: "Raul",
     type: "Alumni",
     bio: "",
@@ -283,10 +275,9 @@
     social: []
   }
 %}
-
 {% set caleb = {
     name: "Caleb Smith",
-    subtitle: "",
+    subtitle: "Student | CS",
     modifier: "Caleb",
     type: "Alumni",
     bio: "",
@@ -295,7 +286,6 @@
     social: []
   }
 %}
-
 {% set raghav = {
     name: "Raghav Kataria",
     subtitle: "PhD Student | PSC",
@@ -315,9 +305,7 @@
     ]
   }
 %}
-
 {% set staff = [naveen, shelby, raghav, roussie] %}
-
 {% set bioinfoStaff = [roussie, matt, austin, caleby] %}
 {% set gradStudents = [roussie, raghav, david, brady] %}
 {% set undergradStudents = [] %}
