--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -31,7 +31,7 @@
     <div class="row mt-3 justify-content-center">
       {% for person in gradStudents %}
         <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
-          {{ personCardModal(person) }}
+          {{ personCardModal(person) | safe }}
         </div>
       {% endfor %}
     </div>
@@ -48,7 +48,7 @@
     <div class="row mt-3 justify-content-center">
       {% for person in undergradStudents %}
         <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
-          {{ personCardModal(person) }}
+          {{ personCardModal(person) | safe }}
         </div>
       {% endfor %}
     </div>
@@ -65,7 +65,7 @@
     <div class="row mt-3 justify-content-center">
       {% for person in bioinfoStaff %}
         <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
-          {{ personCardModal(person) }}
+          {{ personCardModal(person) | safe }}
         </div>
       {% endfor %}
     </div>
@@ -81,7 +81,7 @@
     <div class="row mt-3 justify-content-center">
       {% for person in alumni %}
         <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
-          {{ personCardModal(person) }}
+          {{ personCardModal(person) | safe }}
         </div>
       {% endfor %}
     </div>
