Updating rousselene's profile image

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -39,8 +39,7 @@
     and cheminformatics tools to predict binding affinities, optimize lead compounds, and support 
     structure-based drug design",
     email: "rousselene.larson@usu.edu",
-    {# img: "/image/raw/bioinfo/profile/rousselenel.jpg?h=600&w=500", #}
-    img: "/image/raw/bioinfo/profile/2.jpg",
+    img: "/image/raw/bioinfo/profile/rousselenel.jpg?h=600&w=500",
     social: [
       {type: "linkedin", link: "https://www.linkedin.com/feed/"},
       {type: "twitter", link: "https://twitter.com/rousselene"}
