--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,11 @@
+{% set stripenet = {
+    title: "StripNET: A Wheat-Stripe Rust Interactome Database",
+    date: "October 12, 2025",
+    desc: "StripeNET is a systems biology tool that maps protein-protein interactions between wheat and stripe rust pathogen strains, helping researchers uncover molecular mechanisms of disease and develop durable resistance in crops.",
+    img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/stripenet.png",
+    link: "/stripenet/",
+    alt_text: "StripeNET web page."
+} %}
 {% set rslpred2 = {
     title: "RSLpred2: An Integrated Web Server for the Annotation of Rice Proteome Subcellular Localization Using Deep Learning",
     date: "July 4, 2025",
@@ -533,7 +541,7 @@
 %}
 
 {% set general = [naveenDefends, naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
-{% set science = [rslpred2, prgminer, atsubp2, hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
+{% set science = [stripenet, rslpred2, prgminer, atsubp2, hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [rslpred2, prgminer, atsubp2, hpipy, naveenDefends] %}
+{% set latest = [stripenet, rslpred2, prgminer, atsubp2, hpipy] %}
