--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -1,3 +1,10 @@
+{% set stripenet = {
+    img: "/image/bioinfo/tools/stripenet.png",
+    title: "StripeNET",
+    link: "https://kaabil.net/stripenet/"
+  }
+%}
+
 {% set predhpi = {
     img: "/image/bioinfo/tools/predHpi.PNG",
     title: "PredHPI",
@@ -238,7 +245,7 @@
  }
  %}
 
-{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA, HuPoxNET, HPIpy] %}
+{% set hpi = [stripenet, predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA, HuPoxNET, HPIpy] %}
 {% set clpt = [AtSubP2, RSLpred2, LegumeLoc, plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [HPInet, greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb, tritikbdb, myDockDB, APInet] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
