--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -89,7 +89,7 @@
         <div class="row justify-content-center">
          
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-            {{ personCard("/image/raw/bioinfo/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
+            {{ personCard("/image/raw/bioinfo/profile/rousselenel.jpg?h=600&w=500", "Rousselene B. Larson", "Bioinformatics Scientist") }}
           </div>
          
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
