Removing links for Raghav

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -296,11 +296,8 @@
     email: "raghav.kataria@usu.edu",
     img: "/image/aspect/people/raghav/raghav2.jpg?a=c&w=5&h=6",
     social: [
-	  {type: "google", link: "https://scholar.google.com/citations?user=_tz_cHsAAAAJ&hl=en"},
-      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187"},
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
-      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"},
-      {type: 'github', link: 'https://github.com/geek09rk'}
+      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"}
     ]
   }
 %}
