--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,5 +1,5 @@
 {% set stripenet = {
-    title: "StripNET: A Wheat-Stripe Rust Interactome Database",
+    title: "StripeNET: A Wheat-Stripe Rust Interactome Database",
     date: "October 12, 2025",
     desc: "StripeNET is a systems biology tool that maps protein-protein interactions between wheat and stripe rust pathogen strains, helping researchers uncover molecular mechanisms of disease and develop durable resistance in crops.",
     img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/stripenet.png",
@@ -159,7 +159,7 @@
 {% set lacsubpred = {
     title: "LacSubPred",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/lacsubpred.PNG?a=height&w=6&h=6",
-    date: " Jan 1, 2017",
+    date: "Jan 1, 2017",
     desc: "Laccases (E.C. 1.10.3.2) are multi-copper oxidases that have gained importance in many industries such as biofuels, 
     pulp production, textile dye bleaching,",
     link: "/lacsubpred/",
@@ -533,15 +533,24 @@
 
 {% set fullbrightnews = {
     title: "Fulbright, NAHEP Doctoral Students Bring Big Data and Ideas to USU Bioinformatics Lab",
-    date: " June 12, 2023",
+    date: "June 12, 2023",
     type: "USU Today",
     desc: "The Utah State University Bioinformatics Facility recently hosted two graduate students funded by prestigious scholarships.",
     link: "https://www.usu.edu/today/story/fulbright-nahep-doctoral-students-bring-big-data-and-ideas-to-usu-bioinformatics-lab/?nl=907&utm_source=todaynewsletter&utm_medium=email&utm_campaign=nl907&utm_content=fulbright-nahep-doctoral-students-bring-big-data-and-ideas-to-usu-bioinformatics-lab"
   }
 %}
 
+{% set avianflufundingnews = {
+    title: "USDA Awards $1.9M for AI-Driven Avian Flu Research",
+    date: "February 5, 2026",
+    type: "USU Today",
+    desc: "Highly-pathogenic avian influenza is a growing problem, both in agriculture and beyond. Waterfowl are the primary carriers, but the virus easily spreads to other birds and has made the jump to other species...",
+    link: "https://www.usu.edu/today/story/usu-bioinformatics-and-artificial-intelligence-lab-receives-19m-to-develop-avian-flu-treatments/?nl=2058&utm_source=todaynewsletter&utm_medium=email&utm_campaign=nl2058&utm_content=usu-bioinformatics-and-artificial-intelligence-lab-receives-19m-to-develop-avian-flu-treatments"
+  }
+%}
+
 {% set general = [naveenDefends, naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [stripenet, rslpred2, prgminer, atsubp2, hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
-{% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
+{% set media = [avianflufundingnews, fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
 {% set latest = [stripenet, rslpred2, prgminer, atsubp2, hpipy] %}
